# crimson

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.txt  gettext.config.js  manage.py  package-lock.json  package.json  pyproject.toml  vitest.config.mts  vitest.setup.mts
.github/workflows/: main.yml  project.yml
crimson/: apps.py  celery.py  hosts.py  settings.py  urls.py  wsgi.py
crimson/etl_modules/: import_single_csv_with_processing.py
crimson/pkg/graphs/branches/: 0_Description.json  10_Related actors.json  11_Organisation.json  12_Object.json  13_Person.json  1_Existence.json  3_Location type.json  7_Operational base.json  8_Purpose.json  9_Refers to.json  External reference.json  Location.json  Name.json  Occupation.json  Place.json
crimson/pkg/graphs/resource_models/: Object.json  Organisation.json  Person.json  Place.json
crimson/pkg/reference_data/collections/: ce-arches-coll-06-11.xml
crimson/pkg/reference_data/concepts/: ce-arches-thes-06-11.xml
crimson/pkg/system_settings/: System_Settings.json
crimson/plugins/: bulk-uploader-plugin.json
crimson/src/crimson/etl_modules/ImportSingleCsvWithProcessing/: ImportSingleCsvWithProcessing.vue
crimson/src/plugins/BulkUploader/: BulkUploader.vue
crimson/system_settings/: System_Settings.json
crimson/templates/views/components/etl_modules/: import_single_csv_with_processing.htm
crimson/templates/views/components/plugins/: bulk-uploader.htm
tests/: test_settings.py
tests/search_indexes/: sample_index_tests.py
(+7 files in other folders)
